# app

./: .gitignore  Jenkinsfile  README.md  build.gradle  mkdep.sh  mktoolchains.sh
app/: CMakeLists.txt  android.jks  build.gradle  proguard-rules.pro
app/mpg123-prefix/tmp/: mpg123-cfgcmd.txt
app/src/androidTest/java/rocks/stalin/android/app/: ExampleInstrumentedTest.java  TestSetupHelper.java
app/src/androidTest/java/rocks/stalin/android/app/model/: MusicProviderTest.java
app/src/androidTest/java/rocks/stalin/android/app/playback/: PlaybackManagerTest.java  QueueManagerTest.java  SimpleMetadataUpdateListener.java  SimplePlayback.java  SimplePlaybackServiceCallback.java
app/src/androidTest/java/rocks/stalin/android/app/utils/: QueueHelperTest.java  SimpleMusicProviderSource.java
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  clock.cpp  mp3file.cpp  native-lib.cpp
app/src/main/cpp-dep/install/arm64-v8a/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/arm64-v8a/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/armeabi-v7a/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/armeabi-v7a/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/armeabi/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/armeabi/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/mips/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/mips/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/mips64/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/mips64/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/x86/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/x86/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/install/x86_64/lib/: libmpg123.la  libout123.la
app/src/main/cpp-dep/install/x86_64/lib/pkgconfig/: libmpg123.pc  libout123.pc
app/src/main/cpp-dep/mpg123/: Makefile.in  aclocal.m4  configure  mpg123.spec
app/src/main/cpp-dep/mpg123/autom4te.cache/: output.0  requests  traces.0  traces.1
app/src/main/cpp-lib/libmpg123/tmp/: mpg123-cfgcmd.txt
app/src/main/java/rocks/stalin/android/app/: AlbumArtCache.java  AverageWindow.java  CastOptionsProvider.java  ClientMusicService.java  ClientNetworkService.java  LockstepVariable.java  MP3Decoder.java  MP3Encoding.java  MP3MediaInfo.java  MainActivity.java  MediaNotificationManager.java  MusicService.java  NetworkService.java  PackageValidator.java  ServerNetworkService.java  VoiceSearchParams.java
app/src/main/java/rocks/stalin/android/app/communication/: CommunicationService.java  MessageAsyncTask.java  WiFiDirectBroadcastReceiver.java
app/src/main/java/rocks/stalin/android/app/concurrent/: CachedTaskExecutor.java  Lifecycle.java  SimpleTaskScheduler.java  TaskExecutor.java  TaskScheduler.java  TimeAwareRunnable.java  TimeAwareTaskExecutor.java
app/src/main/java/rocks/stalin/android/app/decoding/: MP3Decoder.java  MP3Encoding.java  MP3File.java  MP3MediaInfo.java  MediaInfo.java  MediaReader.java
app/src/main/java/rocks/stalin/android/app/framework/: AsyncFactory.java  Entrypoint.java  Finalize.java  Lifecycle.java  ServiceLocator.java  SimpleMath.java  SimpleTaskScheduler.java
app/src/main/java/rocks/stalin/android/app/model/: ExternalStorageSource.java  Group.java  MusicProvider.java  MusicProviderSource.java  MutableMediaMetadata.java  RemoteJSONSource.java
app/src/main/java/rocks/stalin/android/app/network/: LocalNetworkSntpOffsetSource.java  LocalNetworkSntpOffsetSourceFactory.java  LocalOffsetService.java  MessageConnection.java  MessageRegistry.java  Messageable.java  OffsetSource.java  OffsetSourceFactory.java  PeriodicPollOffsetProvider.java  ServerListener.java  ServerListenerManager.java  SntpOffsetSource.java  SntpOffsetTask.java  SntpServer.java  StreamerNetworkService.java  TCPClientConnector.java  TCPServerConnectionFactory.java  TimeChangedReceiver.java  WifiDirectBroadcastReceiver.java  WifiP2PConnection.java  WifiP2PConnectionFactory.java  WifiP2PDiscoveryClient.java  WifiP2PManagerFacade.java  WifiP2PMarcoPolo.java  WifiP2PMessageClient.java  WifiP2PMessageServer.java  WifiP2pServiceAnnouncer.java
app/src/main/java/rocks/stalin/android/app/playback/: ActionStrategy.java  AudioMixer.java  AudioSink.java  BetterAudioSink.java  BetterVirtualMediaPlayer.java  BufferTracker.java  CastPlayback.java  DebugSink.java  LocalAudioMixer.java  LocalBufferQueue.java  LocalPlayback.java  LocalSoundSink.java  MediaPlayer.java  MediaPlayerBackend.java  MediaPlayerImpl.java  Playback.java  PlaybackManager.java  PlaybackState.java  PluggableMediaPlayer.java  QueueManager.java  RemoteMixer.java  RemotePlayback.java  RemotePlayerBackend.java  SampleQueue.java  TimedAudioPlayer.java  TimedEventQueue.java  VirtualMediaPlayer.java
app/src/main/java/rocks/stalin/android/app/soundapi/: Song.java  SongAdapter.java  SoundController.java  SoundService.java
app/src/main/java/rocks/stalin/android/app/ui/: ActionBarCastActivity.java  BaseActivity.java  ClientConnectedActivity.java  FullScreenActivity.java  GroupItemAdapter.java  (+12 more)
app/src/main/res/drawable/: middle_notify.xml
app/src/main/res/layout/: activity_client_connected.xml  activity_main.xml  activity_mode_select.xml  activity_placeholder.xml  activity_player.xml  activity_select_group.xml  fragment_group.xml  nav_header.xml  nearby_message.xml  song.xml  tv_activity_player.xml  tv_playback_controls.xml  tv_vertical_grid.xml
app/src/main/res/menu/: drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: allowed_media_browser_callers.xml
app/src/proto/: Metadata.proto  mediainfo.proto  metadata.proto  music.proto  newmusic.proto  pausecommand.proto  playcommand.proto  seekcommand.proto  sessioninfo.proto  sntprequest.proto  sntpresponse.proto  songchangecommand.proto  sync.proto  timestamp.proto  welcome.proto
app/src/test/java/rocks/stalin/android/app/: ExampleUnitTest.java
(+51 files in other folders)
